check codemagic config

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,8 +16,13 @@ workflows:
         scripts:
             - |
                 # build Flutter module
+                echo "recent path"
                 pwd
+                echo "list file"
                 ls -a
+                echo "FCI_BUILD_DIR is ?"
+                echo $FCI_BUILD_DIR
+                echo "start build"
                 cd $FLUTTER_MODULE_DIR
                 flutter packages get
                 flutter build ios-framework --output=$FCI_BUILD_DIR/$HOST_IOS_APP_DIR/Flutter
